--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.3.3",
@@ -13,6 +14,7 @@
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^3.7.0",
     "next": "10.0.7",
+    "next-on-netlify": "^2.9.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
